# voice-assistant

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  setup.sh
docs/: architecture.md  voices.md
jupiter_voice/: __init__.py  __main__.py  cli.py  config.py  state_machine.py
jupiter_voice/audio/: capture.py  cues.py  playback.py
jupiter_voice/gateway/: openclaw.py
jupiter_voice/stt/: close_phrase.py  whisper_mlx.py
jupiter_voice/tts/: kokoro_tts.py  macos_fallback.py
jupiter_voice/utils/: health.py
jupiter_voice/wake/: detector.py
scripts/: generate_cues.py  train_wake_word.py
tests/: conftest.py  test_close_phrase.py  test_config.py  test_gateway.py  test_state_machine.py
